--- a/src/components/DropdownMenu/DropdownMenu.module.scss
+++ b/src/components/DropdownMenu/DropdownMenu.module.scss
@@ -9,7 +9,7 @@
   outline: none;
   overflow: hidden;
   padding: $space-4 0;
-  z-index: 100;
+  z-index: 402;
 
   &[data-state='open'] {
     animation: fadeIn 120ms ease;
